Case: skb_gro_receive
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/mem/page_pool02_SKB_return_callback.org
+++ b/areas/mem/page_pool02_SKB_return_callback.org
@@ -111,6 +111,11 @@ TODO: Look into code solutions
  - (2) "release" page_pool state, via calling page_pool_unmap_page()
  - (3) use skb->frag_list coalesce instead
 
+
+*** Case: skb_gro_receive()
+
+
+
 * Testing procedures
 
 ** Multicast traffic
