xdp-projects.org: Use CATEGORY instead of FILETAGS
Signed-off-by: Toke Høiland-Jørgensen <toke@redhat.com>

--- a/xdp-project.org
+++ b/xdp-project.org
@@ -1,5 +1,5 @@
 #+TITLE: Top-level XDP project descriptions
-#+FILETAGS: XDP
+#+CATEGORY: XDP
 #+OPTIONS: ^:nil
 
 * TODO Missing update of ifconfig counters
